tests/baselines/reference/unusedTypeParameterInFunction4.errors.txt
unusedTypeParameterInFunction4.ts(1,13): error TS6133: 'X' is declared but its value is never read.
unusedTypeParameterInFunction4.ts(4,5): error TS2454: Variable 'a' is used before being assigned.
unusedTypeParameterInFunction4.ts(5,5): error TS2454: Variable 'b' is used before being assigned.


==== unusedTypeParameterInFunction4.ts (3 errors) ====
    function f1<X, Y, Z>() {
                ~
!!! error TS6133: 'X' is declared but its value is never read.
        var a: Y;
        var b: Z;
        a;
        ~
!!! error TS2454: Variable 'a' is used before being assigned.
        b;
        ~
!!! error TS2454: Variable 'b' is used before being assigned.
    }